# Multimodal-AI-Image-Caption-Generation

./: .gitignore  LICENSE  README.md  approach.md  pyproject.toml
notebooks/: baseline_vs_fine_tuned_full.ipynb  baseline_vs_finetuned_evaluation_20k.ipynb  coco_eda.ipynb  preprocessing.ipynb  qualitative_caption_retrieval.ipynb  training_sample.ipynb
src/: dataset.py  train_clip.py  train_clip_full.py  trainer.py
